--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
             justify-content: center;
             align-items: center;
             color: white;
-            /* 增加玻璃效果 */
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
         }
         h1 {
             font-size: 50px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             animation: fadeIn 2s ease-in-out;
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            padding: 10px 20px;
+            border-radius: 10px;
         }
         p {
             font-size: 20px;
@@ -172,8 +174,6 @@
             <canvas id="fireworksCanvas"></canvas>
         </div>
 
-    </div>
-
     <div class="footer">
         © 2025 全部运行代码由 GAN 设计与开发
     </div>
@@ -186,9 +186,8 @@
             currentSection++;
             document.getElementById(`section${currentSection}`).style.display = "flex";
             window.scrollTo(0, 0);
-
             if (currentSection === 8) {
-                setTimeout(startFireworks, 500);
+                startFireworks();
             }
         }
 
@@ -269,16 +268,6 @@
             }, 500);
             
             animate();
-        }
-
-        function nextSlide() {
-            document.getElementById(`section${currentSection}`).style.display = "none";
-            currentSection++;
-            document.getElementById(`section${currentSection}`).style.display = "flex";
-            window.scrollTo(0, 0);
-            if (currentSection === 8) {
-                startFireworks();
-            }
         }
     </script>
 </body>
