--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <h1>请输入密码</h1>
       <p>请输入正确密码以继续：</p>
       <div class="input-container">
-        <input type="password" id="passwordInput" placeholder="输入密码" oninput="validatePassword()" onkeypress="handleEnter(event)">
+        <input type="password" id="passwordInput" placeholder="密码不知道就问GXP或DJ" oninput="validatePassword()" onkeypress="handleEnter(event)">
       </div>
       <button onclick="nextSlide()" id="nextButton2" disabled>下一页</button>
     </div>
@@ -223,7 +223,7 @@
     </div>
 
     <div class="footer">
-      © 2025 全部运行代码由 GAN 设计与开发
+      ©2025全部运行代码由GAN设计与开发 出现bug联系@GAN
     </div>
   </div>
 
