--- a/index.html
+++ b/index.html
@@ -210,20 +210,20 @@
       <p>这张很好看！📷摄影师@GAN</p>
       <p>图片加载失败就刷新或者换网络环境</p>
       <p>实在不行买台新手机</p>
-      <img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片">
+      <img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片合集">
       <button onclick="nextSlide()">下一页</button>
     </div>
 
     <div class="section" id="section8" style="animation-delay: 2.1s;">
       <h1>祝李老师未来一切顺利！</h1>
-      <p>再次祝：毕业快乐，未来可期！🎉</p>
+      <p>毕业快乐，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
       <button onclick="goToHome()">回到首页</button>
       <canvas id="fireworksCanvas"></canvas>
     </div>
 
     <div class="footer">
-      ©2025全部运行代码由GAN设计与开发 出现bug联系@GAN
+      ©2025 全部运行代码由 GAN 设计与开发
     </div>
   </div>
 
