--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <div class="section show" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
+      <p>-- 在第一页添加烟花 canvas div class="section show" id="section1"</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -162,7 +163,7 @@
 
     <!-- 新增的小游戏页面（插入在第一页和原第二页之间） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>小游戏：点击得分挑战</h1>
+      <h1>想个什么游戏折磨一下</h1>
       <p>在10秒内点击按钮尽可能多次获取分数！</p>
       <p>分数：<span id="scoreDisplay">0</span></p>
       <button id="gameButton" onclick="gameClick()">点击得分</button>
