--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <h1>想个什么游戏折磨一下</h1>
       <p>在10秒内点击按钮尽可能多次获取分数！</p>
       <p>分数：<span id="scoreDisplay">0</span></p>
-      <button id="gameButton" onclick="gameClick()">点击得分</button>
+      <button id="gameButton" onclick="gameClick()">点我得分</button>
       <p id="timerDisplay">时间剩余: 10秒</p>
       <button onclick="nextSlide()" id="nextButtonGame" style="display:none;">下一页</button>
     </div>
