--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <div class="section show" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
+      <p>website start time 2025/3/16</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -167,7 +168,9 @@
 
     <!-- 新增的小游戏页面（插入在第一页和原第二页之间） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>想个什么游戏折磨一下</h1>
+      <h1>稍微等一会。活动下手指</h1>
+      <p>等待后面的底层画面渲染完毕..</p>
+      <p>等待后续底层图片加载完成..</p>
       <p>在10秒内点击按钮尽可能多次获取分数！</p>
       <p>分数：<span id="scoreDisplay">0</span></p>
       <button id="gameButton" onclick="gameClick()">点我得分</button>
@@ -245,8 +248,8 @@
 
     <!-- 毕业祝福页面，现为第九页 -->
     <div class="section" id="section9" style="animation-delay: 2.4s;">
-      <h1>祝李老师未来一切顺利！</h1>
-      <p>毕业快乐，未来可期！🎉</p>
+      <h1>祝李老师毕业快乐！</h1>
+      <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
       <button onclick="goToHome()">回到首页</button>
       <canvas id="fireworksCanvas"></canvas>
