--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
       <p>website start time 2025/3/16</p>
+      <p>/* 新增：第一页烟花效果 canvas 样式 */</p>
+      <p>/* 优化按钮：更圆润的边角，渐变背景与更平滑的悬停效果 */</p>
+      <p>background: linear-gradient(45deg, var(--primary-color), #fff);</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
