--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
       <p>体育体能第一</p>
       <p>学习成绩第一</p>
       <p>吃饭第一</p>
+      <p>...第一</p>
       <p>是我们学习的榜样</p>
       <div class="checkbox-container">
         <input type="checkbox" id="confirm2" onchange="enableNextButton('confirm2', 'nextButton3')"> 
@@ -234,8 +235,8 @@
     <!-- DENG 页面，现为第七页 -->
     <div class="section" id="section7" style="animation-delay: 1.8s;">
       <h1>DENG</h1>
-      <p>希君生羽翼</p>
-      <p>一化北冥鱼</p>
+      <p>希君生羽翼,</p>
+      <p>一化北冥鱼。</p>
       <button onclick="nextSlide()">下一页</button>
     </div>
 
