--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
+      <p>button onclick="goToHome()">回到首页</button</p>
       <button onclick="goToHome()">回到首页</button>
       <canvas id="fireworksCanvas"></canvas>
     </div>
