--- a/index.html
+++ b/index.html
@@ -161,9 +161,6 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
       <p>website start time 2025/3/16</p>
-      <p>/* 新增：第一页烟花效果 canvas 样式 */</p>
-      <p>/* 优化按钮：更圆润的边角，渐变背景与更平滑的悬停效果 */</p>
-      <p>background: linear-gradient(45deg, var(--primary-color), #fff);</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -199,7 +196,7 @@
       <h1>请输入密码</h1>
       <p>请输入正确密码以继续：</p>
       <div class="input-container">
-        <input type="password" id="passwordInput" placeholder="测试版密码04240417" oninput="validatePassword()" onkeypress="handleEnter(event)">
+        <input type="password" id="passwordInput" placeholder="密码不知道就问GXP或DJ" oninput="validatePassword()" onkeypress="handleEnter(event)">
       </div>
       <button onclick="nextSlide()" id="nextButton2" disabled>下一页</button>
     </div>
@@ -247,7 +244,6 @@
       <p>这张很好看！📷摄影师@GAN</p>
       <p>图片加载失败就刷新或者换网络环境</p>
       <p>实在不行买台新手机</p>
-      <p>img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片合集"</p>
       <img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片合集">
       <button onclick="nextSlide()">下一页</button>
     </div>
@@ -257,13 +253,20 @@
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
-      <p>button onclick="goToHome()">回到首页</button</p>
       <button onclick="goToHome()">回到首页</button>
+      <button onclick="nextSlide()">查看制作人员名单</button>
       <canvas id="fireworksCanvas"></canvas>
     </div>
 
+    <!-- 新增：说明页面，现为第十页 -->
+    <div class="section" id="section10" style="animation-delay: 2.7s;">
+      <h1>制作人员说明</h1>
+      <p>制作人员: gan 和 deng</p>
+      <button onclick="prevSlide()">上一页</button>
+    </div>
+
     <div class="footer">
-      ©2025测试版 运行代码由 GAN 设计与开发
+      ©2025 全部运行代码由 GAN 设计与开发
     </div>
   </div>
 
@@ -307,6 +310,21 @@
         if (currentSection === 9) {
           startFireworks();
         }
+      }, 300);
+    }
+
+    function prevSlide() {
+      const current = document.getElementById(`section${currentSection}`);
+      current.classList.remove('show');
+      setTimeout(() => {
+        current.style.display = "none";
+        currentSection--;
+        const prev = document.getElementById(`section${currentSection}`);
+        prev.style.display = "flex";
+        setTimeout(() => {
+          prev.classList.add('show');
+        }, 100);
+        window.scrollTo(0, 0);
       }, 300);
     }
 
