--- a/index.html
+++ b/index.html
@@ -260,13 +260,16 @@
 
     <!-- 新增：说明页面，现为第十页 -->
     <div class="section" id="section10" style="animation-delay: 2.7s;">
-      <h1>制作人员说明</h1>
-      <p>制作人员: gan 和 deng</p>
+      <h1>制作人员</h1>
+      <p>代码设计与开发:GAN</p>
+      <p>动画改进与优化:GAN</p>
+      <p>文字来源:GAN DENG</p>
+      <p>图片来源:GAN DENG</p>
       <button onclick="prevSlide()">上一页</button>
     </div>
 
     <div class="footer">
-      ©2025 全部运行代码由 GAN 设计与开发
+      ©2025 运行代码由 GAN 设计与开发
     </div>
   </div>
 
