--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
       <p>website start time 2025/3/16</p>
+      <p>canvas id="fireworksCanvasFirst"></canvas</p>
+      <p>button onclick="nextSlide()</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -196,7 +198,7 @@
       <h1>请输入密码</h1>
       <p>请输入正确密码以继续：</p>
       <div class="input-container">
-        <input type="password" id="passwordInput" placeholder="密码不知道就问GXP或DJ" oninput="validatePassword()" onkeypress="handleEnter(event)">
+        <input type="password" id="passwordInput" placeholder="test密码04240417" oninput="validatePassword()" onkeypress="handleEnter(event)">
       </div>
       <button onclick="nextSlide()" id="nextButton2" disabled>下一页</button>
     </div>
@@ -244,6 +246,7 @@
       <p>这张很好看！📷摄影师@GAN</p>
       <p>图片加载失败就刷新或者换网络环境</p>
       <p>实在不行买台新手机</p>
+      <p>img src="63.jpg" alt="lbr吃饭照片合集"</p>
       <img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片合集">
       <button onclick="nextSlide()">下一页</button>
     </div>
@@ -253,6 +256,7 @@
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
+      <p>canvas id="fireworksCanvas"></canvas</p>
       <button onclick="goToHome()">回到首页</button>
       <button onclick="nextSlide()">查看制作人员名单</button>
       <canvas id="fireworksCanvas"></canvas>
@@ -269,7 +273,7 @@
     </div>
 
     <div class="footer">
-      ©2025 运行代码由 GAN 设计与开发
+      ©2025测试版运行代码由 GAN 设计与开发
     </div>
   </div>
 
