--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
-      <p>canvas id="fireworksCanvas"></canvas</p>
+      <p>canvas id="fireworksCanvas"</p>
       <button onclick="goToHome()">回到首页</button>
       <button onclick="nextSlide()">查看制作人员名单</button>
       <canvas id="fireworksCanvas"></canvas>
