--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <p>From 甘弦朋 邓杰</p>
       <p>website start time 2025/3/16</p>
       <p>canvas id="fireworksCanvasFirst"></canvas</p>
-      <p>button onclick="nextSlide()</p>
+      <p>button onclick="nextSlide()"</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -290,7 +290,7 @@
       <canvas id="fireworksCanvas"></canvas>
     </div>
 
-    <!-- 新增：说明页面，现为第十页 -->
+    <!-- 制作人员页面，现为第十页 -->
     <div class="section" id="section10" style="animation-delay: 2.7s;">
       <h1>制作人员</h1>
       <p>代码设计与开发: GAN</p>
@@ -298,6 +298,15 @@
       <p>文字来源: GAN DENG</p>
       <p>图片来源: GAN DENG</p>
       <button onclick="prevSlide()">上一页</button>
+      <button onclick="nextSlide()">彩蛋</button>
+    </div>
+
+    <!-- 新增：彩蛋页面，现为第十一页 -->
+    <div class="section" id="section11" style="animation-delay: 3.0s;">
+      <h1>彩蛋</h1>
+      <p>你发现了隐藏的彩蛋页面！</p>
+      <button onclick="prevSlide()">上一页</button>
+      <button onclick="goToHome()">回到首页</button>
     </div>
 
     <div class="footer">
