--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>From 甘弦朋 邓杰</p>
       <p>website start time 2025/3/16</p>
-      <p>canvas id="fireworksCanvasFirst"></canvas</p>
-      <p>button onclick="nextSlide()"</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -274,7 +272,6 @@
       <p>这张很好看！📷摄影师@GAN</p>
       <p>图片加载失败就刷新或者换网络环境</p>
       <p>实在不行买台新手机</p>
-      <p>img src="63.jpg" alt="lbr吃饭照片合集"</p>
       <img src="7444be2a3315b3ec849c7e19b569863.jpg" alt="lbr吃饭照片合集">
       <button onclick="nextSlide()">下一页</button>
     </div>
@@ -284,7 +281,6 @@
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
-      <p>canvas id="fireworksCanvas"</p>
       <button onclick="goToHome()">回到首页</button>
       <button onclick="nextSlide()">查看制作人员名单</button>
       <canvas id="fireworksCanvas"></canvas>
@@ -305,12 +301,13 @@
     <div class="section" id="section11" style="animation-delay: 3.0s;">
       <h1>彩蛋</h1>
       <p>你发现了隐藏的彩蛋页面！</p>
+      <p>我先想想这里放点什么照片好</p>
       <button onclick="prevSlide()">上一页</button>
       <button onclick="goToHome()">回到首页</button>
     </div>
 
     <div class="footer">
-      ©2025测试版运行代码由 GAN 设计与开发
+      ©2025 运行代码由 GAN 设计与开发
     </div>
   </div>
 
