--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <p>文字来源: GAN DENG</p>
       <p>图片来源: GAN DENG</p>
       <button onclick="prevSlide()">上一页</button>
-      <button onclick="nextSlide()">彩蛋</button>
+      <button onclick="nextSlide()">不要点我</button>
     </div>
 
     <!-- 新增：彩蛋页面，现为第十一页 -->
