--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
       <p>website start time 2025/3/16</p>
       <p>已知问题1：页面切换后显示内容有概率重定向</p>
       <p>已知问题2：彩蛋页面未能正确找到库内容</p>
+      <p>已知问题3：特别瞬间页面照片集显示不正确</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 在第一页添加烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
