--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     <!-- 密码验证页面，现为第四页 -->
     <div class="section" id="section4" style="animation-delay: 0.9s;">
       <h1>请输入密码</h1>
-      <p>请输入正确密码以继续：</p>
-      <p>*为避免此公开网站遭受恶意攻击登录所以设置密码*</p>
+      <p>*因为买不起私人服务器所以用的公共网络搭建*</p>
+      <p>*为避免此公共网站遭受恶意攻击登录所以设置密码*</p>
       <div class="input-container">
         <input type="password" id="passwordInput" placeholder="test密码04240417" oninput="validatePassword()" onkeypress="handleEnter(event)">
       </div>
