--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
     <!-- 首页 -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>！！警告：此版本拍照页有概率让手机无反应！！</p>
-      <p>website start time 2025/3/16</p>
+      <p>！！警告！！</p>
+      <p>此版本拍照页有概率让手机无反应</p>
       <p>问题1：页面切换后显示内容有概率重定向</p>
       <p>问题2：彩蛋页面未能正确找到库内容</p>
-      <p>问题3：特别瞬间页面照片集显示不正确</p>
+      <p>问题3：特别瞬间页面照片集有概率显示不正确</p>
       <p>问题4：照相页面拍照后无法下一页</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
