--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       position: relative;
       z-index: 1;
     }
-    /* 每个页面占满全屏，并居中 */
+    /* 每个页面占满全屏，并垂直排列 */
     .section {
       width: 90%;
       max-width: 800px;
@@ -217,12 +217,11 @@
     <!-- 首页 -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>！！警告！！</p>
-      <p>此版本拍照页有概率让手机无反应</p>
-      <p>问题1：页面切换后显示内容有概率重定向</p>
-      <p>问题2：彩蛋页面未能正确找到库内容</p>
-      <p>问题3：特别瞬间页面照片集有概率显示不正确</p>
-      <p>问题4：照相页面拍照后无法下一页</p>
+      <p>From 甘弦朋 邓杰</p>
+      <p>website start time 2025/3/16</p>
+      <p>已知问题1：页面切换后显示内容有概率重定向</p>
+      <p>已知问题2：彩蛋页面未能正确找到库内容</p>
+      <p>已知问题3：特别瞬间页面照片集显示不正确</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -232,11 +231,9 @@
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>电子合照</h1>
       <p>请允许调用摄像头进行拍照</p>
-      <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
-      <br>
+      <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc; margin-bottom:10px;"></video>
       <button id="captureButton" onclick="capturePhoto()">拍照</button>
-      <canvas id="photoCanvas" width="320" height="240" style="display:none; border:1px solid #ccc; margin-top:10px;"></canvas>
-      <br>
+      <canvas id="photoCanvas" width="320" height="240" style="display:none; border:1px solid #ccc; margin:10px 0 20px 0;"></canvas>
       <button onclick="nextSlide()">下一页</button>
     </div>
 
