--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
     <!-- 首页 -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>From 甘弦朋 邓杰</p>
-      <p>website start time 2025/3/16</p>
-      <p>已知问题1：页面切换后显示内容有概率重定向</p>
-      <p>已知问题2：彩蛋页面未能正确找到库内容</p>
-      <p>已知问题3：特别瞬间页面照片集显示不正确</p>
+      <p>！警告！</p>
+      <p>问题4有概率让手机死机爆内存</p>
+      <p>问题1：页面切换后显示内容有概率重定向</p>
+      <p>问题2：彩蛋页面未能正确找到库内容</p>
+      <p>问题3：特别瞬间页面照片集显示不正确</p>
+      <p>问题4：合照页面拍照后有概率无法进行下一页操作或重复拍照</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
