--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>！警告！</p>
-      <p>问题4有概率让手机死机爆内存</p>
-      <p>问题1：页面切换后显示内容有概率重定向</p>
-      <p>问题2：彩蛋页面未能正确找到库内容</p>
-      <p>问题3：特别瞬间页面照片集显示不正确</p>
-      <p>问题4：合照页面拍照后有概率无法进行下一页操作或重复拍照</p>
+      <p>4有概率让手机死机爆内存</p>
+      <p>1：页面切换后显示内容有概率重定向</p>
+      <p>2：彩蛋页面未能正确找到库内容</p>
+      <p>3：特别瞬间页面照片集显示不正确</p>
+      <p>4：合照页面拍照后有概率无法进行下一页操作或重复拍照</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
