--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!-- 首页 -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>！警告！</p>
+      <p>！！警告！！</p>
       <p>4有概率让手机死机爆内存</p>
       <p>1：页面切换后显示内容有概率重定向</p>
       <p>2：彩蛋页面未能正确找到库内容</p>
@@ -243,11 +243,11 @@
     <!-- 小游戏页面 -->
     <div class="section" id="section3" style="animation-delay: 0.6s;">
       <h1>等待时活动下手指</h1>
-      <p>等待后续底层画面渲染完毕..</p>
+      <p>等待拍摄照片上传后台图库..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
-      <p>等待后续底层画面加载完成..</p>
+      <p>等待后续底层画面渲染完毕..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
