--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <!-- 密码验证页面 -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>请输入密码</h1>
-      <p>*因为买不起私人服务器所以用的公共网络搭建*</p>
+      <p>*因为买不起私人服务器所以用公共网络搭建*</p>
       <p>*为避免此公共网站遭受恶意攻击登录所以设置密码*</p>
       <div class="input-container">
         <input type="password" id="passwordInput" placeholder="test密码04240417" oninput="validatePassword()" onkeypress="handleEnter(event)">
@@ -354,7 +354,7 @@
     <div class="section" id="section12" style="animation-delay: 3.3s;">
       <h1>彩蛋</h1>
       <p>你发现了隐藏的彩蛋页面！</p>
-      <p>我先想想这里放点什么照片好</p>
+      <p>我先想想这里放点什么照片</p>
       <button onclick="prevSlide()">上一页</button>
       <button onclick="goToHome()">回到首页</button>
     </div>
