--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
       <p>！！警告！！</p>
       <p>4有概率让手机死机爆内存</p>
       <p>1：页面切换后显示内容重定向</p>
-      <p>2：彩蛋页面无法找到图片库内容</p>
-      <p>3：特别瞬间页面照片集无法显示</p>
-      <p>4：合照页面拍照后无法进行下一页操作或重复拍照</p>
+      <p>2：彩蛋页无法找到图片库内容</p>
+      <p>3：特别瞬间页照片集无法显示</p>
+      <p>4：合照页拍照后无法进行下一页操作或重复拍照</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
