--- a/index.html
+++ b/index.html
@@ -218,11 +218,12 @@
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>！！警告！！</p>
-      <p>4有概率让手机死机爆内存</p>
+      <p>3有概率让手机死机爆内存</p>
       <p>1：页面切换后显示内容重定向</p>
-      <p>2：彩蛋页无法找到图片库内容</p>
-      <p>3：特别瞬间页照片集无法显示</p>
-      <p>4：合照页拍照后无法进行下一页操作或重复拍照</p>
+      <p>2：特别瞬间页照片集无法显示</p>
+      <p>3：合照页拍照后无法进行下一页或重复拍照</p>
+      <p>*电子合照页面请允许调用摄像头确认画面*</p>
+      <p>*！电子合照页面不要拍照！*</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -232,6 +233,7 @@
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>电子合照</h1>
       <p>请允许调用摄像头进行拍照</p>
+      <p>！测试版网站 请谨慎操作！</p>
       <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
       <br>
       <button id="captureButton" onclick="capturePhoto()">拍照</button>
@@ -243,7 +245,7 @@
     <!-- 小游戏页面 -->
     <div class="section" id="section3" style="animation-delay: 0.6s;">
       <h1>等待时活动下手指</h1>
-      <p>等待拍摄照片上传后台图库..</p>
+      <p>等待拍摄照片上传服务器图库..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
