--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       animation: fadeInDown 1s ease-out;
     }
     /* 首页和毕业祝福页面标题置于烟花之上 */
-    #section1 h1, #section10 h1 {
+    #section1 h1, #section11 h1 {
       position: relative;
       z-index: 2;
     }
@@ -229,8 +229,15 @@
       <canvas id="fireworksCanvasFirst"></canvas>
     </div>
 
-    <!-- 新增：电子合照页面 -->
+    <!-- 新增：摇手机互动页面 -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
+      <h1>用力晃动手机以摇出祝福</h1>
+      <p id="blessingText" style="display: none;">毕业快乐！</p>
+      <button id="nextButtonSensor" onclick="nextSlide()" disabled>下一页</button>
+    </div>
+
+    <!-- 电子合照页面（原第2页，现在为第3页） -->
+    <div class="section" id="section3" style="animation-delay: 0.6s;">
       <h1>电子合照</h1>
       <p>请允许调用摄像头进行拍照</p>
       <p>！测试版网站 请谨慎操作！</p>
@@ -242,8 +249,8 @@
       <button onclick="nextSlide()">下一页</button>
     </div>
 
-    <!-- 小游戏页面 -->
-    <div class="section" id="section3" style="animation-delay: 0.6s;">
+    <!-- 小游戏页面（原第3页，现在为第4页） -->
+    <div class="section" id="section4" style="animation-delay: 0.9s;">
       <h1>等待时活动下手指</h1>
       <p>等待拍摄照片上传服务器图库..</p>
       <div class="progress-container">
@@ -261,8 +268,8 @@
       <button onclick="nextSlide()" id="nextButtonGame" style="display:none;">下一页</button>
     </div>
 
-    <!-- 人机验证页面 -->
-    <div class="section" id="section4" style="animation-delay: 0.9s;">
+    <!-- 人机验证页面（原第4页，现在为第5页） -->
+    <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>人机验证注意</h1>
       <p>点击“已确认”方可进行下一步</p>
       <p>点击即代表您同意上述内容</p>
@@ -273,8 +280,8 @@
       <button onclick="nextSlide()" id="nextButton1" disabled>下一页</button>
     </div>
 
-    <!-- 密码验证页面 -->
-    <div class="section" id="section5" style="animation-delay: 1.2s;">
+    <!-- 密码验证页面（原第5页，现在为第6页） -->
+    <div class="section" id="section6" style="animation-delay: 1.5s;">
       <h1>请输入密码</h1>
       <p>*因为买不起私人服务器所以用公共网络搭建*</p>
       <p>*为避免此公共网站遭受恶意攻击登录所以设置密码*</p>
@@ -284,8 +291,8 @@
       <button onclick="nextSlide()" id="nextButton2" disabled>下一页</button>
     </div>
 
-    <!-- 回忆成就页面 -->
-    <div class="section" id="section6" style="animation-delay: 1.5s;">
+    <!-- 回忆成就页面（原第6页，现在为第7页） -->
+    <div class="section" id="section7" style="animation-delay: 1.8s;">
       <h1>回忆成就</h1>
       <p>声乐部门公认的唱歌第一</p>
       <p>钢琴部门弹钢琴第一</p>
@@ -301,8 +308,8 @@
       <button onclick="nextSlide()" id="nextButton3" disabled>下一页</button>
     </div>
 
-    <!-- GAN 页面 -->
-    <div class="section" id="section7" style="animation-delay: 1.8s;">
+    <!-- GAN 页面（原第7页，现在为第8页） -->
+    <div class="section" id="section8" style="animation-delay: 2.1s;">
       <h1>GAN</h1>
       <p>好好吃饭，按时睡觉。</p>
       <p>家人闲坐，灯火可亲。</p>
@@ -313,16 +320,16 @@
       <button onclick="nextSlide()" id="nextButton4" disabled>下一页</button>
     </div>
 
-    <!-- DENG 页面 -->
-    <div class="section" id="section8" style="animation-delay: 2.1s;">
+    <!-- DENG 页面（原第8页，现在为第9页） -->
+    <div class="section" id="section9" style="animation-delay: 2.4s;">
       <h1>DENG</h1>
       <p>希君生羽翼,</p>
       <p>一化北冥鱼。</p>
       <button onclick="nextSlide()">下一页</button>
     </div>
 
-    <!-- 图片展示页面 -->
-    <div class="section" id="section9" style="animation-delay: 2.4s;">
+    <!-- 图片展示页面（原第9页，现在为第10页） -->
+    <div class="section" id="section10" style="animation-delay: 2.7s;">
       <h1>特别的瞬间</h1>
       <p>这张很好看！📷摄影师@GAN</p>
       <p>图片加载失败就刷新或者换网络环境</p>
@@ -331,8 +338,8 @@
       <button onclick="nextSlide()">下一页</button>
     </div>
 
-    <!-- 毕业祝福页面 -->
-    <div class="section" id="section10" style="animation-delay: 2.7s;">
+    <!-- 毕业祝福页面（原第10页，现在为第11页） -->
+    <div class="section" id="section11" style="animation-delay: 3.0s;">
       <h1>祝李老师毕业快乐！</h1>
       <p>开开心心，未来可期！🎉</p>
       <p>顺顺利利，学业有成！🎉</p>
@@ -341,8 +348,8 @@
       <canvas id="fireworksCanvas"></canvas>
     </div>
 
-    <!-- 制作人员页面 -->
-    <div class="section" id="section11" style="animation-delay: 3.0s;">
+    <!-- 制作人员页面（原第11页，现在为第12页） -->
+    <div class="section" id="section12" style="animation-delay: 3.3s;">
       <h1>制作人员</h1>
       <p>代码设计与开发: GAN</p>
       <p>动画改进与优化: GAN</p>
@@ -352,8 +359,8 @@
       <button onclick="nextSlide()">不要点我</button>
     </div>
 
-    <!-- 彩蛋页面 -->
-    <div class="section" id="section12" style="animation-delay: 3.3s;">
+    <!-- 彩蛋页面（原第12页，现在为第13页） -->
+    <div class="section" id="section13" style="animation-delay: 3.6s;">
       <h1>彩蛋</h1>
       <p>你发现了隐藏的彩蛋页面！</p>
       <p>我先想想这里放点什么照片</p>
@@ -398,12 +405,15 @@
         setTimeout(() => {
           next.classList.add('show');
           if (currentSection === 2) {
-            startCamera();
+            startSensor();
           }
           if (currentSection === 3) {
+            startCamera();
+          }
+          if (currentSection === 4) {
             startGame();
           }
-          if (currentSection === 10) {
+          if (currentSection === 11) {
             startFireworks();
           }
         }, 100);
@@ -510,6 +520,24 @@
       const context = canvas.getContext('2d');
       context.drawImage(video, 0, 0, canvas.width, canvas.height);
       canvas.style.display = "block";
+    }
+
+    // 传感器互动代码：摇晃手机显示祝福
+    function startSensor() {
+      let sensorTriggered = false;
+      function deviceMotionHandler(event) {
+        if (sensorTriggered) return;
+        const acceleration = event.accelerationIncludingGravity;
+        const totalAcc = Math.sqrt(acceleration.x * acceleration.x + acceleration.y * acceleration.y + acceleration.z * acceleration.z);
+        // 根据需要调整阈值，此处设为25
+        if (totalAcc > 25) {
+          sensorTriggered = true;
+          document.getElementById("blessingText").style.display = "block";
+          document.getElementById("nextButtonSensor").disabled = false;
+          window.removeEventListener('devicemotion', deviceMotionHandler);
+        }
+      }
+      window.addEventListener('devicemotion', deviceMotionHandler, false);
     }
 
     // 烟花动画代码
