--- a/index.html
+++ b/index.html
@@ -231,8 +231,11 @@
 
     <!-- 新增：摇手机互动页面 -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>用力晃动手机以摇出祝福</h1>
-      <p id="blessingText" style="display: none;">毕业快乐！</p>
+      <h1>请允许访问位置与方向传感器</h1>
+      <p>不给予权限无法检测以进行下一步</p>
+      <p id="blessingText" style="display: none;">毕业不是终点，而是一个新的起点。</p>
+      <p id="blessingText" style="display: none;">愿家人闲坐，灯火可亲。</p>
+      <p id="blessingText" style="display: none;">愿前路光明，一切顺利。</p>
       <button id="nextButtonSensor" onclick="nextSlide()" disabled>下一页</button>
     </div>
 
