--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>试试摇一摇手机</h1>
       <p>不给予权限无法检测以进行下一步</p>
-      <p id="blessingText" style="display: none;">毕业不是终点，而是一个新的起点。</p>
-       <p>愿家人闲坐，灯火可亲。</p>
-      <p>愿前路光明，一切顺利。</p>
+      <p id="blessingText" style="display: none;">毕业不是终点，而是一个新的起点。
+        愿家人闲坐，灯火可亲。
+        愿前路光明，一切顺利。</p>
       <button id="nextButtonSensor" onclick="nextSlide()" disabled>下一页</button>
     </div>
 
