--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
       <p>1：页面切换后显示内容重定向</p>
       <p>2：特别瞬间页照片集无法显示</p>
       <p>3：合照页拍照后无法进行下一页或重复拍照</p>
-      <p>*电子合照页面请允许调用摄像头确认画面*</p>
-      <p>*！电子合照页面不要拍照！*</p>
+      <p>合照页面请允许调用摄像头确认画面</p>
+      <p>支持iOS16+</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
       <canvas id="fireworksCanvasFirst"></canvas>
@@ -234,9 +234,7 @@
       <h1>试试摇一摇手机</h1>
       <p>不给予权限无法检测以进行下一步</p>
       <p id="blessingText" style="display: none;">毕业不是终点，而是一个新的起点。
-        愿家人闲坐，灯火可亲。
-        
-                 愿前路光明，一切顺利。</p>
+      家人闲坐，灯火可亲。前路光明，一切顺利。</p>
       <button id="nextButtonSensor" onclick="nextSlide()" disabled>下一页</button>
     </div>
 
@@ -526,7 +524,7 @@
       canvas.style.display = "block";
     }
 
-    // 更新后的传感器互动代码：摇晃手机显示祝福，阈值设为25并请求 iOS 权限
+    // 更新后的传感器互动代码：摇晃手机显示祝福，阈值设为35并请求 iOS 权限
     function startSensor() {
       let sensorTriggered = false;
       function deviceMotionHandler(event) {
@@ -538,7 +536,7 @@
           (acceleration.y || 0) ** 2 +
           (acceleration.z || 0) ** 2
         );
-        // 阈值设为25，更灵敏
+        // 阈值设为35，更灵敏
         if (totalAcc > 25) {
           sensorTriggered = true;
           document.getElementById("blessingText").style.display = "block";
