--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <p>1：页面切换后显示内容重定向</p>
       <p>2：特别瞬间页照片集无法显示</p>
       <p>3：合照页拍照后无法进行下一页或重复拍照</p>
-      <p>请给与网页所有手机权限</p>
+      <p>请给予网页所有手机权限</p>
       <p>支持iOS16+</p>
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
