--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <p>3有概率让手机死机爆内存</p>
       <p>1：页面切换后显示内容重定向</p>
       <p>2：特别瞬间页照片集无法显示</p>
-      <p>3：合照页拍照后无法进行下一页或重复拍照</p>
+      <p>3：合照页拍照无法下一页或重复拍照</p>
       <p>请给予网页所有手机权限</p>
       <p>支持iOS16+</p>
       <button onclick="nextSlide()">下一页</button>
