--- a/index.html
+++ b/index.html
@@ -231,10 +231,13 @@
 
     <!-- 新增：定位页面（插入在首页后） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>想看看你现在在哪里</h1>
+      <h1>我想看看你现在在哪里</h1>
       <p id="locationStatus">正在获取您的位置...</p>
-      <div id="map" style="width: 100%; height: 400px; margin:20px 0; display:none;"></div>
-      <button onclick="nextSlide()">下一页</button>
+      <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
+        <div id="map" style="width:100%; height:400px; display:none;"></div>
+      </div>
+      <!-- 为保证按钮显示在地图上层，加了内联样式 -->
+      <button onclick="nextSlide()" style="position:relative; z-index:2;">下一页</button>
     </div>
 
     <!-- 原摇手机互动页面，现顺延为第3页 -->
@@ -248,7 +251,7 @@
 
     <!-- 电子合照页面，现为第4页 -->
     <div class="section" id="section4" style="animation-delay: 0.9s;">
-      <h1>想多看看你</h1>
+      <h1>电子合照</h1>
       <p>请允许调用摄像头进行拍照</p>
       <p>！测试版网站 请谨慎操作！</p>
       <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
@@ -262,7 +265,7 @@
     <!-- 小游戏页面，现为第5页 -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>等待时活动下手指</h1>
-      <p>等待数据上传服务器..</p>
+      <p>等待拍摄照片上传服务器图库..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
@@ -323,7 +326,6 @@
       <h1>GAN</h1>
       <p>好好吃饭，按时睡觉。</p>
       <p>家人闲坐，灯火可亲。</p>
-      <p>前路光明，一切顺利。</p>
       <div class="checkbox-container">
         <input type="checkbox" id="confirm3" onchange="enableNextButton('confirm3', 'nextButton4')"> 
         <label for="confirm3">已确认</label>
@@ -586,7 +588,7 @@
           document.getElementById("locationStatus").innerText = "当前位置：" + lat.toFixed(6) + ", " + lng.toFixed(6);
           var mapDiv = document.getElementById("map");
           mapDiv.style.display = "block";
-          mapDiv.innerHTML = '<iframe width="100%" height="400" frameborder="0" style="border:0" src="https://maps.google.com/maps?q=' + lat + ',' + lng + '&z=15&output=embed" allowfullscreen></iframe>';
+          mapDiv.innerHTML = '<iframe width="100%" height="400" frameborder="0" style="border:0; position:relative; z-index:1;" src="https://maps.google.com/maps?q=' + lat + ',' + lng + '&z=15&output=embed" allowfullscreen></iframe>';
         }, function(error) {
           document.getElementById("locationStatus").innerText = "获取位置失败：" + error.message;
         });
