--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
     <!-- 新增：定位页面（插入在首页后） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>我想看看你现在在哪里</h1>
+      <h1>看一下你在哪里</h1>
       <p id="locationStatus">正在获取您的位置...</p>
       <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
         <div id="map" style="width:100%; height:400px; display:none;"></div>
@@ -251,7 +251,7 @@
 
     <!-- 电子合照页面，现为第4页 -->
     <div class="section" id="section4" style="animation-delay: 0.9s;">
-      <h1>电子合照</h1>
+      <h1>拍个照</h1>
       <p>请允许调用摄像头进行拍照</p>
       <p>！测试版网站 请谨慎操作！</p>
       <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
@@ -265,7 +265,7 @@
     <!-- 小游戏页面，现为第5页 -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>等待时活动下手指</h1>
-      <p>等待拍摄照片上传服务器图库..</p>
+      <p>等待数据上传服务器..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
@@ -326,6 +326,7 @@
       <h1>GAN</h1>
       <p>好好吃饭，按时睡觉。</p>
       <p>家人闲坐，灯火可亲。</p>
+      <p>前路光明，一切顺利。</p>
       <div class="checkbox-container">
         <input type="checkbox" id="confirm3" onchange="enableNextButton('confirm3', 'nextButton4')"> 
         <label for="confirm3">已确认</label>
