--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
       --white-bg: rgba(255, 255, 255, 0.2);
       --transition-duration: 0.5s;
     }
-    /* 优化背景动画 */
+    /* 新增：启动页面样式 */
+    #splashScreen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      color: #fff;
+      overflow: hidden;
+      z-index: 9999;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    /* 滚动动画，10秒内完成 */
+    @keyframes scrollText {
+      from { transform: translateY(100%); }
+      to { transform: translateY(-100%); }
+    }
+    #sourceCodeDisplay {
+      white-space: pre-wrap;
+      font-family: Consolas, "Courier New", monospace;
+      animation: scrollText 10s linear forwards;
+    }
+
+    /* 原有样式 */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
@@ -213,6 +238,11 @@
   </style>
 </head>
 <body>
+  <!-- 新增：启动页面，滚动显示本站源代码，10秒后自动跳转 -->
+  <div id="splashScreen">
+    <pre id="sourceCodeDisplay">加载中...</pre>
+  </div>
+
   <div class="container" id="container">
     <!-- 首页 -->
     <div class="section" id="section1">
@@ -229,7 +259,7 @@
       <canvas id="fireworksCanvasFirst"></canvas>
     </div>
 
-    <!-- 新增：定位页面（插入在首页后） -->
+    <!-- 定位页面（插入在首页后） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>看一下你在哪里</h1>
       <p id="locationStatus">正在获取您的位置...</p>
@@ -388,6 +418,22 @@
   </div>
 
   <script>
+    // 启动页面：加载自身源代码并滚动显示，10秒后移除启动页面
+    window.addEventListener('load', function() {
+      fetch(window.location.href)
+        .then(response => response.text())
+        .then(text => {
+          document.getElementById('sourceCodeDisplay').textContent = text;
+        })
+        .catch(err => {
+          document.getElementById('sourceCodeDisplay').textContent = "加载源代码失败：" + err;
+        });
+      setTimeout(() => {
+        const splash = document.getElementById('splashScreen');
+        if (splash) splash.remove();
+      }, 10000);
+    });
+
     let currentSection = 1;
     const totalSections = 14; // 当前总页数
 
